# simulation

./: .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  TODO.md  pyproject.toml
src/simulation/: __init__.py  abscissa.py  action.py  axis.py  consolerenderer.py  coordinate.py  coordinate_shift.py  coordinates.py  coordinates_mgr.py  creature.py  entity.py  entity_creator.py  exceptions.py  game.py  game_map.py  grass.py  herbivore.py  main.py  main_new.py  main_old.py  map.py  map_new.py  ordinate.py  params.py  pathfinder.py  player.py  predator.py  pygame_template.py  rock.py  settings.py  simulation.py  some_test.py  tree.py  window.py
src/simulation/archive/: game_v1.py  main_v3.py
src/simulation/entities/: base.py  environment.py  herbivore.py  predator.py
src/simulation/entity/: creature.py  creature_mgr.py  entity.py  entity_creator.py  grass.py  herbivore.py  predator.py  rock.py  rock_old.py  tree.py
src/simulation/game/: main.py
src/simulation/renderer/: color_schemes.py  consolerenderer.py  renderer.py
