[project]
name = "simulation"
version = "0.1.0"
description = "The second project of Sergey Zhukov's roadmap"
authors = [{ name = "Ilia Korepanov" }]

dependencies = [
    "pygame==2.6.1",
]

requires-python = ">=3.9, <3.12"
readme = "README.md"
license = { file = "LICENSE" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "flake8==7.1.1",
    "isort==5.13.2",
    "mypy==1.14.1",
]

[tool.mypy]
follow_imports = "silent"
warn_redundant_casts = true
warn_unused_ignores = true
disallow_any_generics = true
check_untyped_defs = true
no_implicit_reexport = true
ignore_missing_imports = true
strict = true
namespace_packages = true

# for strict mypy:
disallow_untyped_defs = true

[tool.isort]
profile = "black"
line_length = 120
force_alphabetical_sort_within_sections = true
include_trailing_comma = true
use_parentheses = true
multi_line_output = 3

[tool.black]
line-length = 120
skip-string-normalization = true

[project.scripts]
simulation = "simulation.main:main"
